add missing --add-opens + test